--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <!--
+  <head>
+    <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
 
@@ -14,46 +14,148 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+    <base href="$FLUTTER_BASE_HREF" />
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+    <meta charset="UTF-8" />
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+    <meta name="description" content="A new Flutter project." />
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="portfolio_web">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="portfolio_web" />
+    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>portfolio_web</title>
-  <link rel="manifest" href="manifest.json">
+    <title>Aman Negi</title>
+    <link rel="manifest" href="manifest.json" />
 
-  <script>
-    // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = null;
-  </script>
-  <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
-</head>
-<body>
-  <script>
-    window.addEventListener('load', function(ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            appRunner.runApp();
-          });
-        }
+    <script>
+      // The value below is injected by flutter build, do not touch.
+      var serviceWorkerVersion = null;
+    </script>
+
+    <!-- TODO: Make this efficient -->
+
+    <!-- * Preloads the script-->
+    <!-- <script>
+      const preloadLink = document.createElement("link");
+      preloadLink.href = "flutter.js";
+      preloadLink.rel = "preload";
+      preloadLink.as = "script";
+      document.head.appendChild(preloadLink);
+    </script> -->
+
+    <!--? Uses the script -->
+    <!--
+    <script>
+      var usedLaterScript = document.createElement("script");
+      usedLaterScript.src = "https://amannegi.github.io/amannegi/flutter.js";
+      document.body.appendChild(usedLaterScript);
+    </script> -->
+
+    <!-- * Preloads the script, but don't know how to run when DOM rendering completed-->
+    <!-- <link
+      rel="preload"
+      href="https://amannegi.github.io/amannegi/flutter.js"
+      as="script"
+      crossorigin
+    />
+    -->
+
+    <!-- <link rel="preload" href="flutter.js" as="script" crossorigin /> -->
+
+    <!-- <script defer>
+      var usedLaterScript = document.createElement("script");
+      usedLaterScript.src = "flutter.js";
+      document.body.appendChild(usedLaterScript);
+    </script> -->
+
+    <!--! Fonts & Icons -->
+    <link
+      rel="preload"
+      href="assets/fonts/MaterialIcons-Regular.otf"
+      as="font"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="assets/fonts/Poppins-Regular.ttf"
+      as="font"
+      crossorigin
+    />
+
+    <!--! Images -->
+    <link
+      rel="preload"
+      href="assets/assets/github.png"
+      as="fetch"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="assets/assets/twitter.png"
+      as="fetch"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="assets/assets/devpost.png"
+      as="fetch"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="assets/assets/linkedin.png"
+      as="fetch"
+      crossorigin
+    />
+    <link rel="preload" href="favicon.png" as="fetch" crossorigin />
+
+    <!-- ! Other Files -->
+
+    <link
+      rel="preload"
+      href="assets/assets/configs.json"
+      as="fetch"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="assets/AssetManifest.json"
+      as="fetch"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="assets/FontManifest.json"
+      as="fetch"
+      crossorigin
+    />
+    <!-- TODO: Add Fonts and Image preloader (configs, manifest, images) -->
+
+    <!-- This script adds the flutter initialization JS code -->
+    <script src="flutter.js" defer></script>
+
+    <!-- Recommended to get Script Beforehand-->
+  </head>
+  <body style="background-color: #03045e">
+    <script>
+      window.addEventListener("load", function (ev) {
+        // Download main.dart.js
+        _flutter.loader.loadEntrypoint({
+          serviceWorker: {
+            serviceWorkerVersion: serviceWorkerVersion,
+          },
+          onEntrypointLoaded: function (engineInitializer) {
+            engineInitializer.initializeEngine().then(function (appRunner) {
+              appRunner.runApp();
+            });
+          },
+        });
       });
-    });
-  </script>
-</body>
+    </script>
+  </body>
 </html>
